--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 		</div> -->
 		<article class="col-lg-12 col-md-12 text-center">
 				
-				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index3.html">her gune bi kelime</a></h2>
+				<!-- <h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index3.html">her gune bi kelime</a></h2> -->
 				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index2.html">havadan sudan</a></h2>
 				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="cs.html">bilimsel</a></h2>
 
