--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				
 				<!-- <h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index3.html">her gune bi kelime</a></h2> -->
 				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index2.html">havadan sudan</a></h2>
-				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="cs.html">bilimsel</a></h2>
+				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index4.html">bilimsel</a></h2>
 
 
 			</article>
