--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,6 @@
 				<ul>
 										<li><a href="index.html" > <b>home </b></a></li>
 
-					<li><a href="index3.html">her gune bir kelime</a></li>
 					<li><a href="index2.html">havadan sudan</a></li>
 					<li><a href="#">bilimsel</a></li>
 				</ul>
@@ -176,13 +175,22 @@
 				<h2 class="fh5co-article-title"><a href="uc.html">Ana Baba Günü</a></h2>
 				<span class="fh5co-meta fh5co-date">24 Eylül 2022</span>
 			</article>
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
+			<!-- <article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
 					<a href="sil.html"><img src="images/kamyon.png" alt="Image" class="img-responsive"></a>
 				</figure>
 				<span class="fh5co-meta"><a href="sil.html">R4A</a></span>
 				<h2 class="fh5co-article-title"><a href="sil.html">The Bumper Sticker</a></h2>
 				<span class="fh5co-meta fh5co-date">26 September 2022</span>
+			</article> -->
+			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
+			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
+				<figure>
+					<a href="dort.html"><img src="jim.jpg" alt="Image" class="img-responsive"></a>
+				</figure>
+				<span class="fh5co-meta"><a href="dort.html">Berkeley</a></span>
+				<h2 class="fh5co-article-title"><a href="dort.html">jim</a></h2>
+				<span class="fh5co-meta fh5co-date">2 February 2023</span>
 			</article>
 			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
