--- a/index4.html
+++ b/index4.html
@@ -153,7 +153,7 @@
 		<div class="row fh5co-post-entry">
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="bir.html"><img src="cankus.png" alt="Image" class="img-responsive"></a>
+					<a href="bir.html"><img src="cankus.jpeg" alt="Image" class="img-responsive"></a>
 				</figure>
 				<h2 class="fh5co-article-title"><a href="https://ecetabag.medium.com/intellectual-awareness-of-avians-music-cognition-4cd120618d30">Intellectual Awareness of Avians: Music Cognition</a></h2>
 				<span class="fh5co-meta fh5co-date"></span>
