--- a/index2.html
+++ b/index2.html
@@ -185,10 +185,10 @@
 			</article> -->
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="dort.html"><img src="jim.jpg" alt="Image" class="img-responsive"></a>
+					<a href="jim.html"><img src="jim.JPG" alt="Image" class="img-responsive"></a>
 				</figure>
-				<span class="fh5co-meta"><a href="dort.html">Berkeley</a></span>
-				<h2 class="fh5co-article-title"><a href="dort.html">jim</a></h2>
+				<span class="fh5co-meta"><a href="jim.html">Berkeley</a></span>
+				<h2 class="fh5co-article-title"><a href="jim.html">jim</a></h2>
 				<span class="fh5co-meta fh5co-date">2 February 2023</span>
 			</article>
 			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
