--- a/index4.html
+++ b/index4.html
@@ -160,11 +160,9 @@
 			</article>
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="iki.html"><img src="images/sf4.png" alt="Image" class="img-responsive"></a>
+					<a href="iki.html"><img src="images/pomelo.png" alt="Image" class="img-responsive"></a>
 				</figure>
-				<span class="fh5co-meta"><a href="iki.html">Berkeley!</a></span>
-				<h2 class="fh5co-article-title"><a href="iki.html">SF, Amerikanlar ve Partileri</a></h2>
-				<span class="fh5co-meta fh5co-date">3 Eylül 2022</span>
+				<h2 class="fh5co-article-title"><a href="pomelo.html">Pomelo, a Collaborative Education Technology Interaction Robot</a></h2>
 			</article>
 			<div class="clearfix visible-xs-block"></div>
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
