--- a/pomelo.html
+++ b/pomelo.html
@@ -104,9 +104,9 @@
 <article class="col-lg-12 col-md-12 text-center">
 				
 				<!-- <h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index3.html">her gune bi kelime</a></h2> -->
-				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index2.html">IEEE Published Paper</a></h2>
-				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index2.html">C2020 Proceedings</a></h2>
-				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="index4.html">poster</a></h2>
+				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="paper1.html">IEEE Published Paper</a></h2>
+				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="paper2.html">C2020 Proceedings</a></h2>
+				<h2 class="fh5co-article-title"><a style="font-size: 20px;" href="poster.html">poster</a></h2>
 
 
 			</article>
