--- a/poster.html
+++ b/poster.html
@@ -99,7 +99,8 @@
 					<li><a href="#"><i class="icon-instagram"></i></a></li> -->
 				</ul>
 				<div class="col-lg-12 col-md-12 text-center">
-					<h1 id="fh5co-logo"><a href="index.html">geliyo yolda :)</a></h1>
+<iframe src="poster.png" width="100%" height="500px">
+    </iframe>						
 						
 
 				</div>
