--- a/index2.html
+++ b/index2.html
@@ -61,8 +61,8 @@
 										<li><a href="index.html" > <b>home </b></a></li>
 
 					<li><a href="index2.html">havadan sudan</a></li>
-					<li><a href="#">bilimsel</a></li>
-				</ul>
+<!-- 					<li><a href="#">bilimsel</a></li>
+ -->				</ul>
 			</div>
 			
 		</div>
