--- a/jim.html
+++ b/jim.html
@@ -60,10 +60,10 @@
 				<ul>
 										<li><a href="index.html" > <b>home </b></a></li>
 
-					<li><a href="index2.html">her gune bir kelime</a></li>
-					<li><a href="index3.html">havadan sudan</a></li>
-					<li><a href="#">bilimsel</a></li>
-				</ul>
+<!-- 					<li><a href="index2.html">her gune bir kelime</a></li>
+ -->					<li><a href="index3.html">havadan sudan</a></li>
+<!-- 					<li><a href="#">bilimsel</a></li>
+ -->				</ul>
 			</div>
 			
 		</div>
@@ -96,8 +96,8 @@
 			<article class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
 				
 				<span class="fh5co-meta animate-box"><a href="single.html">Berkeley!</a></span>
-				<h2 class="fh5co-article-title animate-box"><a href="single.html">Spotting Turks in the Wild </a></h2>
-				<span class="fh5co-meta fh5co-date animate-box">27 Eylül 2022</span>
+				<h2 class="fh5co-article-title animate-box"><a href="single.html">jim </a></h2>
+				<span class="fh5co-meta fh5co-date animate-box">17 feb 2023</span>
 				
 				<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-left content-article">
 					<div class="row">
