--- a/index2.html
+++ b/index2.html
@@ -183,14 +183,14 @@
 				<h2 class="fh5co-article-title"><a href="sil.html">The Bumper Sticker</a></h2>
 				<span class="fh5co-meta fh5co-date">26 September 2022</span>
 			</article> -->
-			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
+			<!-- <article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
 					<a href="jim.html"><img src="gym.png" alt="Image" class="img-responsive"></a>
 				</figure>
 				<span class="fh5co-meta"><a href="jim.html">Berkeley</a></span>
 				<h2 class="fh5co-article-title"><a href="jim.html">jim</a></h2>
 				<span class="fh5co-meta fh5co-date">2 February 2023</span>
-			</article>
+			</article> -->
 			<div class="clearfix visible-lg-block visible-md-block visible-sm-block visible-xs-block"></div>
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
